--- a/web/miss/index.html
+++ b/web/miss/index.html
@@ -37,14 +37,14 @@
             <!-- Manşet Başı -->
             <div id="mansetler">
                 <div id="manset">
-                    <h2>Pardus 2008 Beta</h2>
+                    <h2>Pardus 2008 İlk Sürüm Adayı</h2>
                     <img style="float:right;padding:60px;padding-top:80px;padding-bottom:80px;" src="http://cekirdek.pardus.org.tr/~gokmen/timer.php?black" align="right" border="0" alt="Pardus 2008" />
-                    <p>Pardus 2008'in Beta1 deneme sürümü testçiler ve geliştiricilerin kullanımına sunuldu. Ayrıntılı bilgiye <a href="http://liste.pardus.org.tr/duyuru/2008-June/000065.html" target="_blank">buradan</a> erişebilirsiniz.</p>
-                    <p>Pardus teknolojileri, güncel masaüstü teknolojileri, görsel tasarım ve paket desteği konularında önemli yenilikler içeren Pardus 2008, her zaman olduğu gibi tüm masaüstünde Türkçe yazım denetimi, hızlı kurulum ve kolay kullanım özellikleri ve masaüstü kullanıcısının tüm gereksinimlerini karşılayacak bir internet/çokluortam/eğlence yazılım dizisi ile geliyor. Pardus ürünleri <a href="http://www.arayan.com/da/gpl_tr.html" target="_blank">GNU GPL Genel Kamu Lisansı</a> ile özgürce çoğaltılıp dağıtılabiliyor.
+                    <p>Pardus 2008'in ilk Sürüm Adayı, deneme sürümü testçiler ve geliştiricilerin kullanımına sunuldu. Ayrıntılı bilgiye <a href="http://liste.pardus.org.tr/duyuru/2008-June/000066.html" target="_blank">buradan</a> erişebilirsiniz.</p>
+                    <p>Güncellenen Pardus teknolojileri -özellikle yeni grafik yapılandırma aracı, yeni Çekirdek (2.6.25.5) ve GCC (4.3.1) sürümlerinin yanı sıra bir çok hata düzeltmesiyle daha kararlı hale gelen sürüm adayı, her zaman olduğu gibi tüm masaüstünde Türkçe yazım denetimi, hızlı kurulum ve kolay kullanım özellikleri ve masaüstü kullanıcısının tüm gereksinimlerini karşılayacak bir internet/çokluortam/eğlence yazılım dizisi ile geliyor. Pardus ürünleri <a href="http://www.pardus.org.tr/gpl.html" target="_blank">GNU GPL Genel Kamu Lisansı</a> ile özgürce çoğaltılıp dağıtılabiliyor.
                     </p>
                     <p>Pardus 2008 <a href="http://tr.pardus-wiki.org/Yol_Haritası:Pardus-2008" target="_blank">yol haritası</a>na uygun olarak yürütülen çalışmaların takvimi ise şöyle:</p>
                     <p><strong>3 Haziran Salı : Pardus 2008 Beta</strong>
-                    <br>9 Haziran Pazartesi : Pardus 2008 RC1
+                    <br><strong>9 Haziran Pazartesi : Pardus 2008 RC1</strong>
                     <br>16 Haziran Pazartesi : Pardus 2008 RC2
                     <br>23 Haziran Pazartesi : Pardus 2008 </p>
                 </div>
