--- a/web/miss/index.html
+++ b/web/miss/index.html
@@ -60,7 +60,7 @@
                     <p>Pardus 2008 <a href="http://tr.pardus-wiki.org/Yol_Haritası:Pardus-2008" target="_blank">yol haritası</a>na uygun olarak yürütülen çalışmaların takvimi ise şöyle:</p>
                     <p><strong>3 Haziran Salı : Pardus 2008 Beta</strong>
                     <br><strong>9 Haziran Pazartesi : Pardus 2008 RC1</strong>
-                    <br><strong>18 Haziran Pazartesi : Pardus 2008 RC2</strong>
+                    <br><strong>18 Haziran Çarşamba : Pardus 2008 RC2</strong>
                     <br>23 Haziran Pazartesi : Pardus 2008 </p>
                 </div>
             </div>
