--- a/web/miss/index.html
+++ b/web/miss/index.html
@@ -52,16 +52,17 @@
             <!-- Manşet Başı -->
             <div id="mansetler">
                 <div id="manset">
-                    <h2>Pardus 2008 İkinci Sürüm Adayı</h2>
-                    <img style="float:right;padding:60px;padding-top:80px;padding-bottom:80px;" src="http://cekirdek.pardus.org.tr/~gokmen/timer.php?black" align="right" border="0" alt="Pardus 2008" />
-                    <p>Pardus 2008'in ikinci Sürüm Adayı, deneme sürümü testçiler ve geliştiricilerin kullanımına sunuldu. Ayrıntılı bilgiye <a href="http://liste.pardus.org.tr/duyuru/2008-June/000067.html" target="_blank">buradan</a> erişebilirsiniz.</p>
-                    <p>Yeni sürüm, önceki Sürüm Adayı'ndan bugüne güncellenen paketler, iyileştirilen Pardus teknolojileri ve her zaman olduğu gibi tüm masaüstünde Türkçe yazım denetimi, hızlı kurulum ve kolay kullanım özellikleri ve masaüstü kullanıcısının tüm gereksinimlerini karşılayacak bir internet/çokluortam/eğlence yazılım dizisi ile geliyor. Pardus ürünleri <a href="http://www.pardus.org.tr/gpl.html" target="_blank">GNU GPL Genel Kamu Lisansı</a> ile özgürce çoğaltılıp dağıtılabiliyor.
+                    <h2>Pardus 2008 Sürüm Tarihi Değişikliği</h2>
+                    <img src="resim/felis_laptop.png" align="right" border="0" alt="Pardus 2008" />
+                    <p>Pardus 2008'in ikinci Sürüm Adayının yayınlanmasındaki gecikme sonrasında yapılan bir değerlendirmeyle, Pardus 2008'in sürüm tarihinin, hem yeni eklenen özelliklerin, hem de depoda bulunan yazılımların test edilebilmesi için gerekli sürenin ayrılmasını sağlamak amacıyla ertelenmesi kararlaştırıldı. 
+		    <br>Ayrıntılı bilgiye <a href="http://liste.pardus.org.tr/duyuru/2008-June/000068.html" target="_blank">buradan</a> erişebilirsiniz.</p>
+                    <p>27 Haziran Cuma günü yayınlanacak olan yeni sürüm, her zaman olduğu gibi tüm masaüstünde Türkçe yazım denetimi, hızlı kurulum ve kolay kullanım özellikleri ve masaüstü kullanıcısının tüm gereksinimlerini karşılayacak bir internet/çokluortam/eğlence yazılım dizisi ile geliyor. Pardus ürünleri <a href="http://www.pardus.org.tr/gpl.html" target="_blank">GNU GPL Genel Kamu Lisansı</a> ile özgürce çoğaltılıp dağıtılabiliyor.
                     </p>
-                    <p>Pardus 2008 <a href="http://tr.pardus-wiki.org/Yol_Haritası:Pardus-2008" target="_blank">yol haritası</a>na uygun olarak yürütülen çalışmaların takvimi ise şöyle:</p>
+                    <p>Güncellenen Pardus 2008 takvim ise şöyle:</p>
                     <p><strong>3 Haziran Salı : Pardus 2008 Beta</strong>
                     <br><strong>9 Haziran Pazartesi : Pardus 2008 RC1</strong>
                     <br><strong>18 Haziran Çarşamba : Pardus 2008 RC2</strong>
-                    <br>23 Haziran Pazartesi : Pardus 2008 </p>
+                    <br>27 Haziran Cuma: Pardus 2008 </p>
                 </div>
             </div>
             <!-- Manşet Sonu -->
