--- a/web/miss/eng/index.html
+++ b/web/miss/eng/index.html
@@ -37,16 +37,17 @@
 <TD width="70%" valign="top">
 <!-- Pardus 2008 -->
 
-                    <h2>Pardus 2008 RC2</h2>
-                    <img src="http://cekirdek.pardus.org.tr/~gokmen/timer.php?en&orange" align="right" width="160" height="55" border="0" alt="Pardus" style="padding-top: 4px; padding-left: 8px;" />
-                    <p>Pardus 2008 RC2, second release candidate version has been made available for testers and developers. More information can be obtained <a href="http://liste.pardus.org.tr/pardus-announce/2008-June/000039.html" target="_blank">here</a>.</p>
-                    <p>This update, employs many bugfixes, improved Pardus tools and packages among usuals as, Turkish spellchecking available right on the desktop, a fast and simple installation procedure, ease of use, and a set of Internet, multimedia, development and editing applications suitable for desktop system users' needs as always. </p>
+                    <h2>Pardus 2008 Release Delayed</h2>
+                    <img src="resim/felis_laptop.png" align="right" border="0" alt="Pardus 2008" />
+                    <p>After the release of Pardus 2008 RC2 have been delayed for two days, it was  discussed to delay the final release from Monday to Friday as well, for having a wider test time for the new features and the packages in the repositories.
+		    <br>More information can be obtained <a href="http://liste.pardus.org.tr/pardus-announce/2008-June/000040.html" target="_blank">here</a>.</p>
+                    <p>Pardus 2008 will be available on June 27, Friday with Turkish spellchecking available right on the desktop, a fast and simple installation procedure, ease of use, and a set of Internet, multimedia, development and editing applications suitable for desktop system users' needs as always. </p>
                     <p>Pardus products are available for free use and distribution under the terms of the <a href="http://www.pardus.org.tr/eng/gpl.html" target="_blank">GNU GPL</a>.</p>
-                    <p>Calendar of pre-release versions determined based on Pardus 2008 <a href="http://en.pardus-wiki.org/Pardus:Pardus-2008_Roadmap" target="_blank">roadmap</a> is as follows:</p>
+                    <p>Updated calendar of pre-release versions is as follows: 
                     <p><strong>Tuesday, 3 June : Pardus 2008 Beta</strong>
                     <br><strong>Monday, 9 June : Pardus 2008 RC1</strong>
                     <br><strong>Wednesday, 18 June : Pardus 2008 RC2</strong>
-                    <br>Monday, 23 June : Pardus 2008 </p>
+                    <br>Friday, 27 June : Pardus 2008 </p>
 <!-- Pardus 2008 -->
 
 <TD width="30%" valign="top">
