--- a/trunk/web/miss/eng/index.html
+++ b/trunk/web/miss/eng/index.html
@@ -38,7 +38,7 @@
 <!-- Pardus 2008 -->
 
                     <h2>Pardus 2008 Release Delayed</h2>
-                    <img src="resim/felis_laptop.png" align="right" border="0" alt="Pardus 2008" />
+                    <img src="http://cekirdek.pardus.org.tr/~gokmen/timer.php?en&black" align="right" border="0" alt="Pardus 2008" style="margin:40px;padding-top:20px;"/>
                     <p>After the release of Pardus 2008 RC2 have been delayed for two days, it was  discussed to delay the final release from Monday to Friday as well, for having a wider test time for the new features and the packages in the repositories.
 		    <br>More information can be obtained <a href="http://liste.pardus.org.tr/pardus-announce/2008-June/000040.html" target="_blank">here</a>.</p>
                     <p>Pardus 2008 will be available on June 27, Friday with Turkish spellchecking available right on the desktop, a fast and simple installation procedure, ease of use, and a set of Internet, multimedia, development and editing applications suitable for desktop system users' needs as always. </p>
