--- a/trunk/web/miss/index.html
+++ b/trunk/web/miss/index.html
@@ -53,7 +53,7 @@
             <div id="mansetler">
                 <div id="manset">
                     <h2>Pardus 2008 Sürüm Tarihi Değişikliği</h2>
-                    <img src="resim/felis_laptop.png" align="right" border="0" alt="Pardus 2008" />
+                    <img src="http://cekirdek.pardus.org.tr/~gokmen/timer.php?black" align="right" border="0" alt="Pardus 2008" style="margin:40px;padding-top:20px;"/>
                     <p>Pardus 2008'in ikinci Sürüm Adayının yayınlanmasındaki gecikme sonrasında yapılan bir değerlendirmeyle, Pardus 2008'in sürüm tarihinin, hem yeni eklenen özelliklerin, hem de depoda bulunan yazılımların test edilebilmesi için gerekli sürenin ayrılmasını sağlamak amacıyla ertelenmesi kararlaştırıldı. 
 		    <br>Ayrıntılı bilgiye <a href="http://liste.pardus.org.tr/duyuru/2008-June/000068.html" target="_blank">buradan</a> erişebilirsiniz.</p>
                     <p>27 Haziran Cuma günü yayınlanacak olan yeni sürüm, her zaman olduğu gibi tüm masaüstünde Türkçe yazım denetimi, hızlı kurulum ve kolay kullanım özellikleri ve masaüstü kullanıcısının tüm gereksinimlerini karşılayacak bir internet/çokluortam/eğlence yazılım dizisi ile geliyor. Pardus ürünleri <a href="http://www.pardus.org.tr/gpl.html" target="_blank">GNU GPL Genel Kamu Lisansı</a> ile özgürce çoğaltılıp dağıtılabiliyor.
