--- a/web/miss/index.html
+++ b/web/miss/index.html
@@ -70,16 +70,13 @@
                     <h2>Pardus Haberleri</h2>
                     <ul>
                         <li>
-                        <p class="metin"><strong>14 Mayıs 2008</strong> // <a href="http://www.ozgurlukicin.com" target="_blank">Özgürlükiçin</a> topluluğunun çıkardığı E-Dergi, ikinci sayısını yayınladı. E-Dergi'ye <a href="http://www.ozgurlukicin.com/e-dergi/" target="_blank">buradan</a> ulaşabilirsiniz.</p>
+                        <p class="metin"><strong>26 Haziran 2008</strong> // <a href="http://www.ozgurlukicin.com" target="_blank">Özgürlükiçin</a> topluluğunun çıkardığı E-Dergi, üçüncü sayısını yayınladı. E-Dergi'ye <a href="http://www.ozgurlukicin.com/e-dergi/" target="_blank">buradan</a> ulaşabilirsiniz.</p>
                         </li>
                         <li>
                         <p class="metin"><strong>12 Mayıs 2008</strong> // <a href="http://www.escort.com.tr/?module=pardus" target="_blank">escort</a> Bilgisayar, "Bilgisayarsız ev kalamayacak!" sloganı ile Pardus 2008 ön yüklü masaüstü ürünlerini piyasaya çıkardı.</p>
                         </li>
                         <li>
                         <p class="metin"><strong>9 Mayıs 2008</strong> // 2008 yazında Pardus <a href="http://tr.pardus-wiki.org/Staj2008" target="_blank">yaz stajı programı</a>na katılacak isimler belli oldu. Bu yaz 21 öğrenci Pardus için çalışacak.</p>
-                        </li>
-                        <li>
-                        <p class="metin"><strong>1 Mayıs 2008</strong> // <a href="http://www.ozgurlukicin.com/" target="_blank">Özgürlükİçin</a> topluluğunun desteğiyle hazırlanan LINUXnet'in mayıs sayısı çıktı.</p>
                         </li>
                         <li>
                         <p class="metin"><strong>24 Nisan 2008</strong> // <a href="http://code.google.com/soc/2008/pardus/about.html" target="_blank">Google Summer of Code</a>'a kabul edilen Pardus Projesi'nde staj yapacak öğrenciler belli oldu.</p>
