--- a/trunk/web/miss/eng/index.html
+++ b/trunk/web/miss/eng/index.html
@@ -37,17 +37,11 @@
 <TD width="70%" valign="top">
 <!-- Pardus 2008 -->
 
-                    <h2>Pardus 2008 Release Delayed</h2>
-                    <img src="http://cekirdek.pardus.org.tr/~gokmen/timer.php?en&black" align="right" border="0" alt="Pardus 2008" style="margin:40px;padding-top:20px;"/>
-                    <p>After the release of Pardus 2008 RC2 have been delayed for two days, it was  discussed to delay the final release from Monday to Friday as well, for having a wider test time for the new features and the packages in the repositories.
-		    <br>More information can be obtained <a href="http://liste.pardus.org.tr/pardus-announce/2008-June/000040.html" target="_blank">here</a>.</p>
-                    <p>Pardus 2008 will be available on June 27, Friday with Turkish spellchecking available right on the desktop, a fast and simple installation procedure, ease of use, and a set of Internet, multimedia, development and editing applications suitable for desktop system users' needs as always. </p>
-                    <p>Pardus products are available for free use and distribution under the terms of the <a href="http://www.pardus.org.tr/eng/gpl.html" target="_blank">GNU GPL</a>.</p>
-                    <p>Updated calendar of pre-release versions is as follows: 
-                    <p><strong>Tuesday, 3 June : Pardus 2008 Beta</strong>
-                    <br><strong>Monday, 9 June : Pardus 2008 RC1</strong>
-                    <br><strong>Wednesday, 18 June : Pardus 2008 RC2</strong>
-                    <br>Friday, 27 June : Pardus 2008 </p>
+                    <h2>One more step for freedom: Pardus 2008</h2>
+                    <img src="../resim/pardus2008.png" align="right" border="0" alt="Pardus 2008" style="margin:10px;padding-top:20px;"/>
+                    <p>New version of the Pardus project, <strong>Pardus 2008</strong>, improved by the latest technologies and up-to-date applications, has been released. As always, Pardus 2008, is being freely distributed under the terms of GNU General Public License (GPL). In compliance with the main goals of the Pardus project, Pardus 2008 has lots of new features for ease of installation and use, both at the infrastructure and interface level. In addition Pardus 2008 provides enhanced hardware support, stable and reliable Linux infrastructure and numeruous applications on a single CD. You will go through a brand new experience of freedom, using Pardus 2008</p>
+                                        <p>You may have a look at <a href="products/pardus-2008-releasenotes-en.html">Release Notes</a> to see what's new in Pardus 2008, and you may download Pardus 2008 from the <a href="download.html">Download</a> page.</p>
+                                                            <p>We wish you days in freedom, using Pardus 2008...</p>
 <!-- Pardus 2008 -->
 
 <TD width="30%" valign="top">
