--- a/trunk/web/miss/index.html
+++ b/trunk/web/miss/index.html
@@ -50,17 +50,11 @@
             <!-- Manşet Başı -->
             <div id="mansetler">
                 <div id="manset">
-                    <h2>Pardus 2008 Sürüm Tarihi Değişikliği</h2>
-                    <img src="http://cekirdek.pardus.org.tr/~gokmen/timer.php?black" align="right" border="0" alt="Pardus 2008" style="margin:40px;padding-top:20px;"/>
-                    <p>Pardus 2008'in ikinci Sürüm Adayının yayınlanmasındaki gecikme sonrasında yapılan bir değerlendirmeyle, Pardus 2008'in sürüm tarihinin, hem yeni eklenen özelliklerin, hem de depoda bulunan yazılımların test edilebilmesi için gerekli sürenin ayrılmasını sağlamak amacıyla ertelenmesi kararlaştırıldı. 
-		    <br>Ayrıntılı bilgiye <a href="http://liste.pardus.org.tr/duyuru/2008-June/000068.html" target="_blank">buradan</a> erişebilirsiniz.</p>
-                    <p>27 Haziran Cuma günü yayınlanacak olan yeni sürüm, her zaman olduğu gibi tüm masaüstünde Türkçe yazım denetimi, hızlı kurulum ve kolay kullanım özellikleri ve masaüstü kullanıcısının tüm gereksinimlerini karşılayacak bir internet/çokluortam/eğlence yazılım dizisi ile geliyor. Pardus ürünleri <a href="http://www.pardus.org.tr/gpl.html" target="_blank">GNU GPL Genel Kamu Lisansı</a> ile özgürce çoğaltılıp dağıtılabiliyor.
-                    </p>
-                    <p>Güncellenen Pardus 2008 takvim ise şöyle:</p>
-                    <p><strong>3 Haziran Salı : Pardus 2008 Beta</strong>
-                    <br><strong>9 Haziran Pazartesi : Pardus 2008 RC1</strong>
-                    <br><strong>18 Haziran Çarşamba : Pardus 2008 RC2</strong>
-                    <br>27 Haziran Cuma: Pardus 2008 </p>
+                    <h2>Özgürlük için bir adım daha: Pardus 2008</h2>
+                    <img src="resim/pardus2008.png" align="right" border="0" alt="Pardus 2008" style="margin:10px;padding-top:20px;"/>
+                    <p>Pardus projesinin en yeni teknolojiler ve en güncel yazılımlarla güçlendirilmiş yeni sürümü <strong>Pardus 2008</strong> yayımlandı. Daha önceki tüm sürümleri gibi bir özgür yazılım olan Pardus 2008, GNU Genel Kamu Lisansı (GPL) ile özgürce dağıtılıp çoğaltılabiliyor. Pardus projesinin temel hedefleri olan kolay kurulum ve kullanım yönünde, gerek altyapı ve gerekse kullanıcı arayüzü düzeyinde önemli yeniliklere sahip olan Pardus 2008 aynı zamanda geniş donanım desteği, kararlı ve güvenilir Linux altyapısı ve tek bir CD ile gelen çok çeşitli uygulamaları ile masaüstü kullanıcılarına yepyeni bir özgürlük deneyimi yaşatmayı vaat ediyor. </p>
+                    <p>Pardus 2008 ile gelen yenilikleri öğrenmek için <a href="urunler/pardus-2008-surum-notlari-tr.html">Sürüm Notları</a> sayfasını inceleyebilir ya da CD görüntüsünü indirmek için <a href="indir.html">İndir</a> sayfasına gidebilirsiniz.</p>
+                    <p>Pardus 2008 ile daha özgür günler diliyoruz...</p>
                 </div>
             </div>
             <!-- Manşet Sonu -->
