--- a/trunk/web/miss/indir.html
+++ b/trunk/web/miss/indir.html
@@ -60,57 +60,30 @@
 
     <td width="661" valign="top" class="metin">
 
-    <span class="baslik">Pardus 2007.3 Lynx lynx
+        <span class="baslik">Pardus 2008
         </span>
 <br><br>
-    md5sum: <b>551b94efcc7eaa7739eaaf47d32aecb8</b><br>
-    sha1sum: <b>519a15fd0d5bfeb8eb5f7afbf5c32d8ab29d9bfb</b><br>
+    md5sum: <b>554ae2c6f6d39225fdf4009f76b4f7b1</b><br>
+    sha1sum: <b>71d7b6774c501c180ea8ba09ef91e551ef1b3325</b><br>
         <br>
         Yardım için, <a href="belgeler/kurulum_nasil.html">kurulum kılavuzu</a>'na
-        başvurabilir, ayrıca 2007.3 Lynx lynx sürümü özellikleri hakkında bilgi almak için 
-        <a href="urunler/pardus-2007.3-Lynx-lynx-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
+        başvurabilir, ayrıca 2008 lynx sürümü özellikleri hakkında bilgi almak için 
+        <a href="urunler/pardus-2008-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
       </p>
       <p>
-        Pardus 2007.3 Lynx lynx'i indirmek için aşağıdaki linkleri kullanabilirsiniz.
+        Pardus 2008'i indirmek için aşağıdaki bağlantıları kullanabilirsiniz.
       </p>
       <p>
         <ul> 
-    <li><a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2007.3">Pardus sunucusu (ftp)</a></li>
-    <li><a href="http://isolar.pardusdepo.org/kurulan/2007.3">Gönüllü yansı (http) (Türkiye dışı)</a></li>
-      <p>
-        Ayrıca Pardus 2007.3 Lynx lynx'i <a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2007.3/Pardus-Kurulan-2007.3.iso.torrent">torrent</a> adresini kullanarak P2P araçları ile de indirebilirsiniz.
+            <li><a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2008">Pardus sunucusu (ftp)</a></li>
+            <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/installcd/2008">ÇOMÜ yansısı (ftp)</a></li>
+            <li><a href="ftp://ftp.linux.org.tr/pub/pardus/kurulan/2008">LKD yansısı (ftp)</a></li>
+            <li><a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/kurulan/2008">ODTÜ yansısı(ftp)</a></li>
+        </ul></p>
+        <p>Ayrıca Pardus 2007.3 Lynx lynx'i <a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2008/Pardus_2008-Kurulan.iso.torrent">torrent</a> adresini kullanarak P2P araçları ile de indirebilirsiniz.</p>
       </p>
-<p>
-        Pardus 2007 ve sonraki sürümleri kullananlar, PiSi'yle güncelleme yaparak 2007.3 Lynx lynx kullanmaya başlayabilirler, ayrıca kurulum yapmaları gerekmez.
-      </p><br /><br />
 </td></tr>
 
-<!-- Pardus Çalışan CD 2007 -->
-  <tr>
-    <td width="20" valign="top">
-      <img src="images/bullet6.png" width="20" height="20" hspace="0" vspace="0" align="top">
-    </td>
-
-    <td width="661" valign="top" class="metin">
-      <p>
-        <span class="baslik">Pardus 2007.3 Lynx lynx Çalışan CD</span>
-    <br><br>
-	md5sum: <b>5e7bffec6ae461f7997d0226a03da608</b><br>
-	sha1sum: <b>5feb82d3b445301995f117c0c0094c2dafc604d5</b><br>
-
-        <br>
-        Çalışan CD bilgisayara kurulmadan CD okuyucunuz üzerinden çalışan Pardus sürümüdür. Pardus'u bilgisayarınıza kurmak için Pardus 2007.3 Lynx lynx Kurulan'ı tercih etmelisiniz. Daha eski sürümlere ftp arşivinden ulaşabilirsiniz.
-        <br>
-        <ul>
-    <li><a href="ftp://ftp.pardus.org.tr/pub/pardus/calisan/2007.3">Pardus sunucusu (ftp) (Türkiye)</a></li>
-    <li><a href="http://isolar.pardusdepo.org/calisan/2007.3">Gönüllü yansı (http) (Türkiye dışı)</a></li>
-      <p>
-        Ayrıca Pardus 2007.3 Lynx lynx Çalışan CD'yi <a href="ftp://ftp.pardus.org.tr/pub/pardus/calisan/2007.3/Pardus-Calisan-2007.3.iso.torrent">torrent</a> adresini kullanarak P2P araçları ile de indirebilirsiniz.
-      </p><br /><br />
-
-
-    </td>
-  </tr>
 </table>
 
 <!-- SAYFA İÇERİK SONU -->
