--- a/trunk/web/miss/eng/download.html
+++ b/trunk/web/miss/eng/download.html
@@ -39,45 +39,27 @@
       <img src="images/bullet6.png" width="20" height="20" hspace="0" vspace="0" align="top">
     </td>
     <td width="661" valign="top" class="metin">
-    <span class="baslik">Pardus 2007.3 Lynx lynx
+        <span class="baslik">Pardus 2008
         </span>
-	<br>
+<br><br>
+    md5sum: <b>554ae2c6f6d39225fdf4009f76b4f7b1</b><br>
+    sha1sum: <b>71d7b6774c501c180ea8ba09ef91e551ef1b3325</b><br>
         <br>
-	Download: <a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2007.3/Pardus-Kurulan-2007.3.iso">Pardus 2007.3 Lynx lynx</a> installable CD
-        <br><br>
-        md5sum: <b>551b94efcc7eaa7739eaaf47d32aecb8</b><br>
-        sha1sum: <b>519a15fd0d5bfeb8eb5f7afbf5c32d8ab29d9bfb</b><br>
-        <br>
-        You may refer to the 
-        <a href="products/pardus-2007.3-Lynx-lynx-releasenotes-en.html">release notes</a> to see what's new and unique in Pardus 2007.3 Lynx lynx and consult the <a href="documents/HOWTO_install.html">installation manual</a> to see the screenshots for installation.
+        You may refer to the <a href="products/pardus-2008-releasenotes-en.html">release notes</a> to see what's new and unique in Pardus 2007.3 Lynx lynx and consult the <a href="documents/HOWTO_install.html">installation manual</a> to see the screenshots for installation.
       </p>
-
-</td></tr>
-
-<!-- Pardus Çalışan CD 2007 -->
-  <tr>
-    <td width="20" valign="top">
-      <img src="images/bullet6.png" width="20" height="20" hspace="0" vspace="0" align="top">
-    </td>
-
-    <td width="661" valign="top" class="metin">
       <p>
-        <span class="baslik">Pardus 2007.3 Lynx lynx Live CD</span>
-    <br><br>
-    md5sum: <b>5e7bffec6ae461f7997d0226a03da608</b><br>
-    sha1sum: <b>5feb82d3b445301995f117c0c0094c2dafc604d5</b><br>
-<br>
-        Pardus Live CD can be used to check whether your hardware is
-        ready for installing Pardus. However, note that, <b>it cannot
-        be used to install Pardus 2007.3 to your hard
-        disk</b>.  In order to install Pardus 2007.3 Lynx lynx, you must
-        download ISO file mentioned above.
-
-        <br>
-        Download: <a href="ftp://ftp.pardus.org.tr/pub/pardus/calisan/2007.3/Pardus-Calisan-2007.3.iso">Pardus 2007.3 Lynx lynx</a></li> Live CD
-
-    </td>
-  </tr>
+        You may use the below links to download Pardus 2008.
+      </p>
+      <p>
+        <ul> 
+            <li><a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2008">Pardus server (ftp)</a></li>
+            <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/installcd/2008">COMU mirror (ftp)</a></li>
+            <li><a href="ftp://ftp.linux.org.tr/pub/pardus/kurulan/2008">LKD mirror (ftp)</a></li>
+            <li><a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/kurulan/2008">METU mirror(ftp)</a></li>
+        </ul></p>
+        <p>You may also download Pardus 2008 using P2P tools with <a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2008/Pardus_2008-Kurulan.iso.torrent">torrent</a> address.</p>
+      </p>
+</td></tr>
 
 </table>
 
