Pardus 2008 kurulumu - devamı gelecek

--- a/trunk/web/miss/ekran-goruntuleri/kurulum/ekran-06.html
+++ b/trunk/web/miss/ekran-goruntuleri/kurulum/ekran-06.html
@@ -58,7 +58,7 @@
 <tr>
 <td align="right"><a href="ekran-05.html"><img src="../../images/nav_back.png" alt="<" width="16" height="16" border="0"></a></td>
 <td>&nbsp;</td>
-<td class="caption" width="60%">Disk bölümlendirme aracını nasıl kullanacağınıza karar vereceğiniz aşamaya vardınız. Veri kaybetmemek için açıklamayı çok dikkatli okuyun!</td>
+<td class="caption" width="60%">Bu ekranda tarihi, saati ve bulunduğunuz yeri düzenleyebilirsiniz. Yaptığınız ayarlar donanım saatinizin ayarlarını da güncelleyecektir.</td>
 <td>&nbsp;</td>
 <td><a href="ekran-07.html"><img src="../../images/nav_forward.png" alt=">" width="16" height="16" border="0"></a></td>
 </tr>
@@ -70,7 +70,7 @@
 <tr>
 <td align="right"><a href="ekran-05.html"><img src="../../images/nav_back.png" alt="<" width="16" height="16" border="0"></a></td>
 <td>&nbsp;</td>
-<td class="caption" width="60%">Disk bölümlendirme aracını nasıl kullanacağınıza karar vereceğiniz aşamaya vardınız. Veri kaybetmemek için açıklamayı çok dikkatli okuyun!</td>
+<td class="caption" width="60%">Bu ekranda tarihi, saati ve bulunduğunuz yeri düzenleyebilirsiniz. Yaptığınız ayarlar donanım saatinizin ayarlarını da güncelleyecektir.</td>
 <td>&nbsp;</td>
 <td><a href="ekran-07.html"><img src="../../images/nav_forward.png" alt=">" width="16" height="16" border="0"></a></td>
 </tr>
