--- a/trunk/web/miss/ekran-goruntuleri/kurulum/ekran-09.html
+++ b/trunk/web/miss/ekran-goruntuleri/kurulum/ekran-09.html
@@ -58,7 +58,7 @@
 <tr>
 <td align="right"><a href="ekran-08.html"><img src="../../images/nav_back.png" alt="<" width="16" height="16" border="0"></a></td>
 <td>&nbsp;</td>
-<td class="caption" width="60%">Diskinizin biçimlendirilmesi (format) büyüklüğüne ve bilgisayarınızın hızına bağlı olarak bir kaç dakika sürebilir, işlemi disk ışığından takip edebilirsiniz.</td>
+<td class="caption" width="60%">Bu ekran disk bölümlendirme ekranıdır. Yapacağınız ayarlar diskinizin üzerinde yer alan verileri silebileceğinden yaptığınız ayarların doğruluğundan ve mevcut diskinizde yer alan bilgilerin mutlaka bir yedeğini aldığınızdan emin olun.</td>
 <td>&nbsp;</td>
 <td><a href="ekran-10.html"><img src="../../images/nav_forward.png" alt=">" width="16" height="16" border="0"></a></td>
 </tr>
@@ -70,7 +70,7 @@
 <tr>
 <td align="right"><a href="ekran-08.html"><img src="../../images/nav_back.png" alt="<" width="16" height="16" border="0"></a></td>
 <td>&nbsp;</td>
-<td class="caption" width="60%">Diskinizin biçimlendirilmesi (format) büyüklüğüne ve bilgisayarınızın hızına bağlı olarak bir kaç dakika sürebilir, işlemi disk ışığından takip edebilirsiniz.</td>
+<td class="caption" width="60%">Bu ekran disk bölümlendirme ekranıdır. Yapacağınız ayarlar diskinizin üzerinde yer alan verileri silebileceğinden yaptığınız ayarların doğruluğundan ve mevcut diskinizde yer alan bilgilerin mutlaka bir yedeğini aldığınızdan emin olun.</td>
 <td>&nbsp;</td>
 <td><a href="ekran-10.html"><img src="../../images/nav_forward.png" alt=">" width="16" height="16" border="0"></a></td>
 </tr>
