--- a/trunk/web/miss/ekran-goruntuleri/kurulum/ekran-11.html
+++ b/trunk/web/miss/ekran-goruntuleri/kurulum/ekran-11.html
@@ -58,7 +58,7 @@
 <tr>
 <td align="right"><a href="ekran-10.html"><img src="../../images/nav_back.png" alt="<" width="16" height="16" border="0"></a></td>
 <td>&nbsp;</td>
-<td class="caption" width="60%">Paketler kopyalandıktan sonra sisteminize uygun şekilde yapılandırılırlar. Bu işlem de bir kaç dakika sürecektir...</td>
+<td class="caption" width="60%">Zorunlu disk bölümü olarak Pardus sistem dosyalarının konacağı bir bölüm yaratmalısınız. İsteğe bağlı olarak kullanıcı dosyalarının da yer alacağı bir bölüm yaratabilirsiniz. Bu sayede sisteminizde bir sorun meydana gelse bile kullanıcı dosyalarınız zarar görmez. Ayrıca yeni sistem kurulumunda yarattığınız bu alanı kullanıcı dizini olarak gösterip ayarlarınızın ve kişisel dosyalarınızın kurduğunuz yeni sisteme de aktarılmasını sağlayabilirsiniz.</td>
 <td>&nbsp;</td>
 <td><a href="ekran-12.html"><img src="../../images/nav_forward.png" alt=">" width="16" height="16" border="0"></a></td>
 </tr>
@@ -70,7 +70,7 @@
 <tr>
 <td align="right"><a href="ekran-10.html"><img src="../../images/nav_back.png" alt="<" width="16" height="16" border="0"></a></td>
 <td>&nbsp;</td>
-<td class="caption" width="60%">Paketler kopyalandıktan sonra sisteminize uygun şekilde yapılandırılırlar. Bu işlem de bir kaç dakika sürecektir...</td>
+<td class="caption" width="60%">Zorunlu disk bölümü olarak Pardus sistem dosyalarının konacağı bir bölüm yaratmalısınız. İsteğe bağlı olarak kullanıcı dosyalarının da yer alacağı bir bölüm yaratabilirsiniz. Bu sayede sisteminizde bir sorun meydana gelse bile kullanıcı dosyalarınız zarar görmez. Ayrıca yeni sistem kurulumunda yarattığınız bu alanı kullanıcı dizini olarak gösterip ayarlarınızın ve kişisel dosyalarınızın kurduğunuz yeni sisteme de aktarılmasını sağlayabilirsiniz.</td>
 <td>&nbsp;</td>
 <td><a href="ekran-12.html"><img src="../../images/nav_forward.png" alt=">" width="16" height="16" border="0"></a></td>
 </tr>
