--- a/trunk/web/miss/ekran-goruntuleri/kurulum/ekran-13.html
+++ b/trunk/web/miss/ekran-goruntuleri/kurulum/ekran-13.html
@@ -58,7 +58,7 @@
 <tr>
 <td align="right"><a href="ekran-12.html"><img src="../../images/nav_back.png" alt="<" width="16" height="16" border="0"></a></td>
 <td>&nbsp;</td>
-<td class="caption" width="60%">Şimdi de bilgisayarı düzenli kullanacak bir kullanıcı tanımlamalısınız. Root kullanıcısı ile gündelik işlerin yapılması güvenlik açısından doğru değildir.</td>
+<td class="caption" width="60%">Kurulumun geri kalanında Özgürlükİçin topluluğunun sizin için hazırladığı Pardus ile ilgili bilgileri içeren mesajları okuyarak işletim sisteminizi yakından tanıyın.</td>
 <td>&nbsp;</td>
 <td><a href="ekran-14.html"><img src="../../images/nav_forward.png" alt=">" width="16" height="16" border="0"></a></td>
 </tr>
@@ -70,7 +70,7 @@
 <tr>
 <td align="right"><a href="ekran-12.html"><img src="../../images/nav_back.png" alt="<" width="16" height="16" border="0"></a></td>
 <td>&nbsp;</td>
-<td class="caption" width="60%">Şimdi de bilgisayarı düzenli kullanacak bir kullanıcı tanımlamalısınız. Root kullanıcısı ile gündelik işlerin yapılması güvenlik açısından doğru değildir.</td>
+<td class="caption" width="60%">Kurulumun geri kalanında Özgürlükİçin topluluğunun sizin için hazırladığı Pardus ile ilgili bilgileri içeren mesajları okuyarak işletim sisteminizi yakından tanıyın.</td>
 <td>&nbsp;</td>
 <td><a href="ekran-14.html"><img src="../../images/nav_forward.png" alt=">" width="16" height="16" border="0"></a></td>
 </tr>
