--- a/trunk/web/miss/ekran-goruntuleri/kurulum/ekran-10.html
+++ b/trunk/web/miss/ekran-goruntuleri/kurulum/ekran-10.html
@@ -58,7 +58,7 @@
 <tr>
 <td align="right"><a href="ekran-09.html"><img src="../../images/nav_back.png" alt="<" width="16" height="16" border="0"></a></td>
 <td>&nbsp;</td>
-<td class="caption" width="60%">Sisteminize Pardus'u kurmaya fiilen başladınız. Paketlerin kopyalanması on dakika ya da disk ve işlemci hızlarınıza bağlı olarak biraz daha uzun sürebilir.</td>
+<td class="caption" width="60%">Diskinizi kendiniz bölümlendirmeyi tercih ederseniz, YALI sizi, disklerinizi listeleyen bu ekrana getirecektir.</td>
 <td>&nbsp;</td>
 <td><a href="ekran-11.html"><img src="../../images/nav_forward.png" alt=">" width="16" height="16" border="0"></a></td>
 </tr>
@@ -70,7 +70,7 @@
 <tr>
 <td align="right"><a href="ekran-09.html"><img src="../../images/nav_back.png" alt="<" width="16" height="16" border="0"></a></td>
 <td>&nbsp;</td>
-<td class="caption" width="60%">Sisteminize Pardus'u kurmaya fiilen başladınız. Paketlerin kopyalanması on dakika ya da disk ve işlemci hızlarınıza bağlı olarak biraz daha uzun sürebilir.</td>
+<td class="caption" width="60%">Diskinizi kendiniz bölümlendirmeyi tercih ederseniz, YALI sizi, disklerinizi listeleyen bu ekrana getirecektir.</td>
 <td>&nbsp;</td>
 <td><a href="ekran-11.html"><img src="../../images/nav_forward.png" alt=">" width="16" height="16" border="0"></a></td>
 </tr>
