--- a/trunk/web/miss/eng/products/pardus-2008-releasenotes-en.html
+++ b/trunk/web/miss/eng/products/pardus-2008-releasenotes-en.html
@@ -104,14 +104,14 @@ The fundamental technologies of Pardus, namely COMAR and Mudur, have been rewrit
 <h3>2.9 Updated applications</h3>
 
 In addition to the new features of Pardus technologies, Pardus 2008 includes numerous version upgrades:
-
- - Updated KDE 3.5.9 Desktop Environment,
- - The latest Linux kernel (2.6.25.9) provides much improved hardware support, together with a stable and reliable system,
- - Important infrastructure improvements including gcc 4.3.1, glibc 2.8, Python 2.5, Java 6 ,
- - The most recent, fastest and most capable internet browser Mozilla Firefox 3.0,
- - OpenOffice.org 2.4.1 which operates on almost all office document formats,
- - Hundreds of free software applications, with less bugs and updated to the most recent versions...
-
+<ul>
+    <li>Updated KDE 3.5.9 Desktop Environment</li>
+    <li>The latest Linux kernel (2.6.25.9) provides much improved hardware support, together with a stable and reliable system</li>
+    <li>Important infrastructure improvements including gcc 4.3.1, glibc 2.8, Python 2.5, Java 6 </li>
+    <li>The most recent, fastest and most capable internet browser Mozilla Firefox 3.0</li>
+    <li>OpenOffice.org 2.4.1 which operates on almost all office document formats</li>
+    <li>Hundreds of free software applications, with less bugs and updated to the most recent versions...</li>
+</ul>
 <h2>3. Installation requirements</h2>
 
 You can run Pardus 2008 on an average hardware. We suggest to use
